2010-02-16  Gary Benson  <gbenson@redhat.com>
	
	* contrib/jck/compile-native-code.sh: Add s390.

2009-10-05  Edward Nevill    <ed@camswl.com>

	* contrib/jck/compile-native-code.sh:
	Support for generation of native libraries for JCK on ARM

2010-02-15 Andrew John Hughes  <ahughes@redhat.com>

	* rewriter/agpl-3.0.txt,
	* rewriter/com/redhat/rewriter/ClassRewriter.java:
	Add class rewriter for fixing Rhino classes
	to use the com.sun.org.mozilla namespace,
	along with corresponding license.

2010-02-12  Gary Benson  <gbenson@redhat.com>

	* configure.ac: Strip stupid options that llvm-config supplies.

2010-02-03  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/IcedTeaNPPlugin.cc 
	(plugin_create_applet_tag): Encode new lines, carriage returns, and other
	special characters before sending them to Java side (de-coding code is
	already in effect on Java side).

2010-02-02  Deepak Bhole <dbhole@redhat.com>

	* plugin/tests/LiveConnect/PluginTest.java
	(jjsEvalTest): New function. Calls JSObject.eval() with given string.
	* plugin/tests/LiveConnect/common.js: Added eval test suite as one of the
	run options.
	* plugin/tests/LiveConnect/index.html: Same.
	* plugin/tests/LiveConnect/jjs_eval_test.js: Eval tests.

2010-02-02  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/java/sun/applet/PluginAppletViewer.java: Re-designed frame
	embedding code so that the applet is dynamically packed into given handle.

2010-02-01  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp
	(SharkCompiler::SharkCompiler): Use sharkContext::module
	instead of sharkContext::module_provider when using LLVM 2.7
	to handle LLVM r94686 API change.
	* ports/hotspot/src/share/vm/shark/sharkContext.hpp
	(sharkContext::module): Made public when using LLVM 2.7.
	(sharkContext::module_provider): Undefine when using LLVM 2.7.
	* ports/hotspot/src/share/vm/shark/llvmHeaders.hpp
	(llvm/ModuleProvider.h): Undefine when using LLVM 2.7.
